# z80-core

./: .gitignore  CMakeLists.txt  Dockerfile  License  README.md  Vagrantfile  build.sh  configure  google-test.cmake  output-variables.cmake
.github/workflows/: ccpp.yml
documents/: spectrum&z80-technicals.htm  spectrum-faq.txt  z80-errors.htm  z80-faq1.htm  z80-faq2.htm  z80-flags.htm  z80-inst-list.txt  z80-instructions(dc).txt  z80-instructions.txt  z80-interrupts.htm  z80-syntax.htm  z80-undocumented-opcodes.htm
include/: Z80Core.h  Z80Core.hpp
linux/ubuntu/: cmake-manual-build.sh  gcc9.sh
src/: AccumulatorRegister.cpp  AccumulatorRegister.h  ByteCpuRegisterSymbol.h  ByteOperationHandler.cpp  ByteOperationHandler.h  ByteRegister.cpp  ByteRegister.h  CpuMnemonicTables.h  DAA.h  EVEN_PARITY.h  FlagRegister.cpp  FlagRegister.h  IOMemoryHandler.h  ImmediateValueReader.h  MemoryCommandHandler.cpp  MemoryCommandHandler.h  MemoryHandler.h  OpcodeCycleReader.cpp  OpcodeCycleReader.h  OpcodeType.h  RegisterByteOperationHandler.cpp  RegisterByteOperationHandler.h  WordCpuRegisterSymbol.h  WordRegister.cpp  WordRegister.h  Z80Byte.cpp  Z80Byte.h  Z80Compiler.cpp  Z80Compiler.h  Z80Core.cpp  Z80CoreCFunctions.cpp  Z80Cpu.CpuInstructionExecution.cpp  Z80Cpu.Debug.cpp  Z80Cpu.cpp  Z80Cpu.h  Z80CpuMnemonicMapper.cpp  Z80CpuMnemonicMapper.h  Z80Word.cpp  Z80Word.h  interpolate.h  (+1 more)
test/: ADD.cpp  ADD_TEST.cpp  AND.cpp  AccumulatorRegisterTest.cpp  ArithemeticControlCommandsTest.cpp  ByteRegisterTest.cpp  CALL_TEST.cpp  CP.cpp  CP_TEST.cpp  CompilerTest.cpp  DEC.cpp  DEC_TEST.cpp  ExchagneAndBlockTransfrerCommandTest.cpp  FlagRegisterTest.cpp  INC.cpp  INC_TEST.cpp  JP.cpp  JP_TEST.cpp  JR.cpp  JR_TEST.cpp  LD.cpp  OR.cpp  RET.cpp  RET_TEST.cpp  SUB.cpp  SUB_TEST.cpp  TestIOMemoryHandler.cpp  TestIOMemoryHandler.h  TestMemoryHandler.cpp  TestMemoryHandler.h  WordRegisterTest.cpp  XOR.cpp  XOR_TEST.cpp  Z80ByteTest.cpp  Z80CoreCFunctionsTest.cpp  Z80CoreTest.cpp  Z80CpuCommandExpectedTestResults.cpp  Z80CpuCommandExpectedTestResults.h  Z80CpuTest.h  Z80CpuTestFixture.cpp  (+2 more)
z80-byte-encoder/: CMakeLists.txt  google-test.cmake
z80-byte-encoder/src/: Z80InstructionEncoder.cpp  Z80InstructionEncoder.h  csv.h  main.cpp  mnemonic-table.csv
z80-byte-encoder/test/: Test.cpp
z80-parser/: CMakeLists.txt  Z80.g4  antlr4.cmake  download.sh  generate.sh
z80-parser/test/: Test16BitCommands.cpp  Test8BitLoadCommands.cpp  TestArithmeticCommands.cpp  TestArithmeticControlCommands.cpp  TestBitManipulationCommands.cpp  TestBranchCommands.cpp  TestExchangeCommands.cpp  TestInputAndOutputCommand.cpp  TestNumbers.cpp  TestRotateCommands.cpp  TestWordArithemeticCommands.cpp  Z80ParserTestFixture.cpp  Z80ParserTestFixture.h
